# fileTransmission

./: CMakeLists.txt  FileTransmissionWindows.sln
client/: CMakeLists.txt  client.cpp  client.vcxproj  client.vcxproj.filters
common/: CMakeLists.txt  common.h  common.vcxproj  common.vcxproj.filters  netpack.h  nocopyable.h  recvService.cpp  recvService.h  sendService.cpp  sendService.h  tool.h
server/: CMakeLists.txt  server.cpp  server.vcxproj  server.vcxproj.filters
